--- a/views/email.html
+++ b/views/email.html
@@ -1,1 +1,10 @@
-this is email.html!
+<div class="module inbox-view">
+  <div class="module__title">
+    <h1> {{ email.title }} </h1>
+  </div>
+  
+</div>
+
+<div class="module directive">
+    <email></email>
+</div>
